# tree-sitter-fastbuild

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: format.yaml  tree-sitter.yaml
after/ftplugin/: fastbuild.lua
bindings/c/: tree-sitter-fastbuild.h  tree-sitter-fastbuild.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/rust/: lib.rs
corpus/: and.txt  array.txt  assignment.txt  comparison.txt  compound.txt  concatenation.txt  condition_directive.txt  define.txt  else.txt  for_each.txt  function_call.txt  function_definition.txt  import.txt  include.txt  preprocessor.txt  scope.txt  struct.txt  undef.txt  variable.txt
examples/: arguments.bff  comments.bff  declaration.bff  define.bff  dynamic_construction.bff  escaping.bff  example.bff  functions.bff  if_else_endif.bff  import.bff  include.bff  once.bff  properties.bff  quotation.bff  scoping.bff  structs.bff  substitutions.bff  user_functions.bff
plugin/: fastbuild.lua
queries/: context.scm  highlights.scm  injections.scm  locals.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: and.txt  array.txt  assignment.txt  comment.txt  comparison.txt  compound.txt  for_each.txt  function_call.txt  function_definition.txt  in.txt  preprocessor.txt  string.txt  struct.txt  variable.txt
(+3 files in other folders)
