[package]
name = "tree-sitter-fastbuild"
description = "FASTBuild grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "FASTBuild"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/pinbraerts/tree-sitter-fastbuild"
homepage = "https://github.com/pinbraerts/tree-sitter-fastbuild"
readme = "README.md"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.21.0"

[build-dependencies]
cc = "1.0"
